@@ -1,5 +1,17 @@
 2018-03-15  Aakash Jain  <aakash_jain@apple.com>
 
+        Add unit-test for NetworkTransaction URLError handling
+        https://bugs.webkit.org/show_bug.cgi?id=183664
+
+        Reviewed by Alexey Proskuryakov.
+
+        * Scripts/webkitpy/common/net/networktransaction_unittest.py:
+        (NetworkTransactionTest._raise_URLError): Method to raise URLError.
+        (NetworkTransactionTest.test_retry_on_HTTPError): Renamed from test_retry.
+        (NetworkTransactionTest.test_retry_on_URLError): unit-test for testing URLError handling.
+
+2018-03-15  Aakash Jain  <aakash_jain@apple.com>
+
         EWS should print the URL in logs on URLError
         https://bugs.webkit.org/show_bug.cgi?id=183651
 
